--- a/figure1/A/fig1A.yml
+++ b/figure1/A/fig1A.yml
@@ -2,16 +2,25 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - r-base=4.2.0
-  - r-tibble=3.1.6
+  - r-base=4.3
+  - r-tibble=3.2.0
   - r-ggupset=0.3.0
-  - r-parallelly=1.33.0
-  - r-ggplot2=3.4.1
+  - r-parallelly=1.34.0
+  - r-ggplot2=3.4.2
   - r-complexupset=1.3.3
-  - bioconductor-iranges=2.32.0
+  - bioconductor-biocgenerics=0.46.0
+  - bioconductor-zlibbioc=1.46
+  - bioconductor-xvector=0.40.0
+  - bioconductor-biostrings=2.68.1
+  - bioconductor-keggrest=1.40.0
+  - bioconductor-annotationdbi=1.62.2
   - bioconductor-genomicranges=1.52.0
-  - bioconductor-genomeinfodb=1.34.9
-  - bioconductor-rtracklayer=1.58.0
+  - bioconductor-biobase=2.60.0
+  - bioconductor-matrixgenerics=1.12.2
+  - bioconductor-summarizedexperiment=1.30.2
+  - bioconductor-genomicalignments=1.36.0
+  - bioconductor-rtracklayer=1.60.0
+  - bioconductor-chipenrich=2.24.0
   - bioconductor-biomart=2.56.1
-  - bioconductor-chipenrich=2.22.0
+  - bioconductor-genomeinfodb=1.36.1
   - bioconductor-s4vectors=0.38.1
