--- a/figure1/A/fig1A.yml
+++ b/figure1/A/fig1A.yml
@@ -3,9 +3,9 @@ channels:
   - bioconda
 dependencies:
   - r-base=4.3
-  - r-tibble=3.2.0
+  - r-tibble=3.2.1
   - r-ggupset=0.3.0
-  - r-parallelly=1.34.0
+  - r-parallelly=1.35.0
   - r-ggplot2=3.4.2
   - r-complexupset=1.3.3
   - bioconductor-biocgenerics=0.46.0
@@ -18,6 +18,8 @@ dependencies:
   - bioconductor-biobase=2.60.0
   - bioconductor-matrixgenerics=1.12.2
   - bioconductor-summarizedexperiment=1.30.2
+  - bioconductor-rhtslib=2.2.0
+  - bioconductor-rsamtools=2.16.0
   - bioconductor-genomicalignments=1.36.0
   - bioconductor-rtracklayer=1.60.0
   - bioconductor-chipenrich=2.24.0
