--- a/figure1/A/fig1A.yml
+++ b/figure1/A/fig1A.yml
@@ -5,7 +5,7 @@ dependencies:
   - r-base=4.3
   - r-tibble=3.2.1
   - r-ggupset=0.3.0
-  - r-parallelly=1.35.0
+  - r-parallelly=1.36.0
   - r-ggplot2=3.4.2
   - r-complexupset=1.3.3
   - bioconductor-biocgenerics=0.46.0
@@ -23,6 +23,7 @@ dependencies:
   - bioconductor-genomicalignments=1.36.0
   - bioconductor-rtracklayer=1.60.0
   - bioconductor-chipenrich=2.24.0
+  - bioconductor-biocfilecache=2.8.0
   - bioconductor-biomart=2.56.1
   - bioconductor-genomeinfodb=1.36.1
   - bioconductor-s4vectors=0.38.1
