--- a/figure4/D/fig4D.yml
+++ b/figure4/D/fig4D.yml
@@ -14,3 +14,5 @@ library("GenomicFeatures")
 library("ChIPpeakAnno")
 library("RColorBrewer")
 library("reshape2")
+library("TxDb.Hsapiens.UCSC.hg38.knownGene")
+
