--- a/figure4/D/fig4D.yml
+++ b/figure4/D/fig4D.yml
@@ -15,4 +15,6 @@ library("ChIPpeakAnno")
 library("RColorBrewer")
 library("reshape2")
 library("TxDb.Hsapiens.UCSC.hg38.knownGene")
+library("GenomicRanges")
+library("IRanges")
 
