import library("GenomeInfoDb")

--- a/figure4/D/fig4D.yml
+++ b/figure4/D/fig4D.yml
@@ -17,4 +17,5 @@ library("reshape2")
 library("TxDb.Hsapiens.UCSC.hg38.knownGene")
 library("GenomicRanges")
 library("IRanges")
+library("GenomeInfoDb")
 
