--- a/figure1/A/snakemake/Snakefile
+++ b/figure1/A/snakemake/Snakefile
@@ -3,7 +3,7 @@
 # sept2023 mouse HG Glc.
 #
 # April 2023 - updated Feb 2024
-# Ran with snakemake 7.32.4
+# Run with snakemake 7.32.4
 ######################
 
 
