--- a/figure1/A/snakemake/config.yaml
+++ b/figure1/A/snakemake/config.yaml
@@ -1,5 +1,5 @@
 samples:
-  summaryFile: "/g/romebioinfo/Projects/glucnac/data/input_table/public_data_sept2023_chipatlas_mouseHG.csv"
+  summaryFile: "data.csv"
 
-outputfolder_root: "/g/boulard/Projects/O-N-acetylglucosamine/data/public_data/mouse/mm10/sept2023/chipatlas-candidates/fastq"
+outputfolder_root: "results"
 
